--- a/app/views/admin/profile_gift_recommendations/edit.haml
+++ b/app/views/admin/profile_gift_recommendations/edit.haml
@@ -34,7 +34,7 @@
         %tr
           %th Gift
           %th Source
-          %th Hide
+          %th Remove?
           %th Score
       %tbody
         - @recommendations.each do |rec|
