--- a/app/views/my_account/giftees/_giftee.haml
+++ b/app/views/my_account/giftees/_giftee.haml
@@ -14,7 +14,7 @@
           = render tab[:tab_pane_partial], giftee: giftee
     - if giftee.finished_surveys?
       = link_to giftee_gift_recommendations_path(giftee), class: 'btn btn-primary btn-block' do
-        VIEW #{giftee.gift_recommendations.count} RECOMMENDATIONS
+        VIEW #{[giftee.gift_recommendations.count, 6].min} RECOMMENDATIONS
     - else
       :ruby
         question_response = giftee.first_unanswered_response
