--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -14,6 +14,9 @@
     width: 20px;
     height: 20px;
   }
+  a.error {
+    border-color: $red-001;
+  }
   a.checked::before {
     content: '';
     position: absolute;
