--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -4,7 +4,6 @@
       .quiz-complete__text.pa3.text-center
         %h1 Terrific, we have gift recommendations for #{@survey_response.giftee_name}.
 
-
       = simple_form_for @survey_response_completion, url: with_invitation_scope(giftee_survey_completion_path(@profile, @survey_response)), html: {class: 'quiz-complete__form'} do |form|
         .pa4
           - unless current_user&.active?
@@ -30,24 +29,12 @@
                 = form.input :user_password, label: 'Password', value: ''
             .row
               .col-xs-12.col-md-12
-                .form-group
-                  - label = 'Please send me occasional updates, such as when there are new Wrapt makers and quiz questions'
-                  = wrapt_styled_checkbox('1', 'survey_response_completion[user_wants_newsletter]', true, {label: label, data: {}})
+                = form.input :user_wants_newsletter, as: :wrapt_styled_checkbox, label: 'Please send me occasional updates, such as when there are new Wrapt makers and quiz questions', input_html: {checked: true}
             .row
               .col-xs-12.col-md-12
-                .form-group
-                  :ruby
-                    data = {loads_in_pjax_modal: true, toggle: "fade out"}
-                    tos_link = link_to "Terms of Service", terms_of_service_path, class: 'clean', data: data
-                    label = "I agree to Wrapt's #{tos_link}"
-                    param_val = params.dig(:survey_response_completion, :user_terms_of_service_accepted)
-                    checked = \
-                    if param_val.nil?
-                      true
-                    else
-                       param_val=='1'
-                    end
-                  = wrapt_styled_checkbox('1', 'survey_response_completion[user_terms_of_service_accepted]', checked, {label: label, data: {}})
+                - data = {loads_in_pjax_modal: true, toggle: "fade out"}
+                - tos_link = link_to "Terms of Service", terms_of_service_path, class: 'clean', data: data
+                = form.input :user_terms_of_service_accepted, as: :wrapt_styled_checkbox, label: "I agree to Wrapt's #{tos_link}".html_safe, input_html: {checked: true}
           - if current_user&.active?
             = form.submit 'View Gift Recommendations'.upcase.html_safe, class: 'btn btn-primary btn-sm center-block'
           - else
