[#153032676] add encouragement message to shipping giftee name

--- a/app/views/ecommerce/checkout/_edit_giftee_name_form.haml
+++ b/app/views/ecommerce/checkout/_edit_giftee_name_form.haml
@@ -1,5 +1,6 @@
 %h3.light
   Shipping Information
+%p.co-paragraph= encouragement_message(@customer_order)
 
 %p
   What is your giftee's full name?
