--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -10,7 +10,7 @@
             .row
               .col-sm-12
                 .create-and-sign-in.mb2
-                  %h4.create-account Save your login to see her gifts!
+                  %h4.create-account Save your login to see Wrapt's recommendations!
                   .already-have-account
                     Already have an account?
                     - return_to = create_via_redirect_giftee_survey_completion_path(@profile, @survey_response)
