--- a/app/views/ecommerce/checkout/_edit_gift_wrapt_form.haml
+++ b/app/views/ecommerce/checkout/_edit_gift_wrapt_form.haml
@@ -16,7 +16,7 @@
       = f.input :include_note, as: :wrapt_styled_checkbox, label: 'Do not include a note', checked_value: 0, unchecked_value: 1
     .j-co-gift-wrapt__note-2{style: f.object.include_note? ? '' : 'display: none;'}
       .row
-        .col-xs-8
+        .col-sm-8
           = f.input :note_envelope_text, label: 'What would you like the front of the note envelope to say?'
       .row
         .col-xs-12
