--- a/app/views/admin/ecommerce/dashboard/index.haml
+++ b/app/views/admin/ecommerce/dashboard/index.haml
@@ -15,3 +15,5 @@
         %td= link_to 'Vendor Billing', admin_ecommerce_billings_path
       %tr
         %td= link_to 'Stats', admin_ecommerce_stats_path
+      %tr
+        %td= link_to 'Promo Codes', admin_ecommerce_promo_codes_path
