--- a/app/views/password_reset_requests_mailer/reset_password_email.html.haml
+++ b/app/views/password_reset_requests_mailer/reset_password_email.html.haml
@@ -9,8 +9,7 @@
           Need help signing back in to Wrapt?
 
         %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
-          Click here to reset your password:
-          = link_to @reset_password_url, style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
+          = link_to 'Click here to reset your password', @reset_password_url, style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
         %p{style: "text-align: center; font-size: 16px; color: #C5AA80; font-weight: bold; line-height: 1.75;"}
           Sincerely,
           %br
