--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -6,7 +6,7 @@
 
 
       - if @existing_user
-        = render 'existing_user'
+        = render 'shared/none_pjax_modal', content: {body_content_partial: 'existing_user', open: true}
       = simple_form_for @survey_response_completion, url: with_invitation_scope(giftee_survey_completion_path(@profile, @survey_response)), html: {class: 'quiz-complete__form'} do |form|
         .pa4
           - unless current_user&.active?
