--- a/app/views/admin/ecommerce/customer_orders/index.haml
+++ b/app/views/admin/ecommerce/customer_orders/index.haml
@@ -52,7 +52,8 @@
               %b= number_to_currency(order.total_to_charge_in_dollars)
             %td.admin-index-table--buttons-cell
               = link_to 'View', url_for(action: :show, id: order.id), class: 'btn btn-default btn-xs'
-              = link_to 'Cancel Order', admin_ecommerce_customer_order_path(order), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
+              - if order.cancelable?
+                = link_to 'Cancel Order', admin_ecommerce_customer_order_path(order), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
           - order.line_items.each do |line_item|
             %tr{class: this_cycle_class}
               %td
