admin promo codes adjustments [#153238584]

--- a/app/assets/stylesheets/modules/admin/_forms.scss
+++ b/app/assets/stylesheets/modules/admin/_forms.scss
@@ -19,5 +19,11 @@
 .min-width-03 {
   min-width: 300px;
 }
+.max-width-01 {
+  max-width: 100px;
+}
+.max-width-02 {
+  max-width: 200px;
+}
 .help-inline {
   color: $alert-danger-text;}
