--- a/app/assets/stylesheets/modules/_loading.scss
+++ b/app/assets/stylesheets/modules/_loading.scss
@@ -7,6 +7,7 @@
   left: 0px;
   background-color: rgba(0, 0, 0, 0.5);
   text-align: center;
+  z-index: 1060;
   &.hidden {
     display: none;
   }
