--- a/app/views/layouts/pjax_modal_content.haml
+++ b/app/views/layouts/pjax_modal_content.haml
@@ -1,6 +1,7 @@
 .modal-header
-  %button.close.pull-right(aria-label="Close" pjax-modal-close type="button")
-    =embedded_svg('icon-close', class: 'modal__icon-close')
+  - unless @disable_close
+    %button.close.pull-right(aria-label="Close" pjax-modal-close type="button")
+      =embedded_svg('icon-close', class: 'modal__icon-close')
   %h4.modal-title(data-pjax-modal-title)
     = yield :modal_title
 .modal-body.clearfix
