--- a/app/assets/stylesheets/modules/_gift_basket.scss
+++ b/app/assets/stylesheets/modules/_gift_basket.scss
@@ -50,6 +50,21 @@
   flex-grow: 200;
   overflow: scroll;
   padding: 36px 22px;
+  // background-image: image-url('3-gifts.png');
+  // background-size: cover;
+}
+.gift-basket__main::after {
+  content: "";
+  position: absolute;
+  background: image-url('3-gifts.png');
+  background-size: cover;
+  background-position: center center;
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;   
 }
 .gift-basket__remove-gift-link {
   display: none;
