--- a/app/views/home/_hero_text_1.haml
+++ b/app/views/home/_hero_text_1.haml
@@ -2,16 +2,4 @@
   .row
     .col-sm-12.col-md-8.col-md-offset-2
       %h1.light.text-center
-        .rotate-words__sentence
-          %span Gift
-          .rotate-words__container 
-            %span Better.
-            %span Kindness.
-            %span Peace.
-            %span Compassion.
-            %span Understanding.
-            %span Generosity.
-            %span Gratitude.
-            %span Empathy.
-            %span Love.
-        Gift Wrapt.
+        The right gift is out there
