--- a/app/views/home/_hero_text_2.haml
+++ b/app/views/home/_hero_text_2.haml
@@ -1,6 +1,4 @@
 .row
   .col-xs-12.col-sm-8.col-sm-offset-2.col-lg-8.col-lg-offset-2
     %p.home__hero-text-secondary__p.light.text-center
-      We use the science of gifting, to help you find the best gifts for her,
-      %br
-      while doing a little good in the world
+      Wrapt will reveal it to you, chosen just for her.
