[#152902292] minor text change for newsletter checkbox

--- a/app/views/survey_response_completions/sign_up.haml
+++ b/app/views/survey_response_completions/sign_up.haml
@@ -24,7 +24,7 @@
           = form.input :user_password, label: 'Password', value: ''
       .row
         .col-xs-12.col-md-12
-          = form.input :user_wants_newsletter, as: :wrapt_styled_checkbox, label: 'Please send me occasional updates, such as when there are new Wrapt makers and quiz questions', input_html: {checked: true}
+          = form.input :user_wants_newsletter, as: :wrapt_styled_checkbox, label: 'Please send me occasional updates, such as new Wrapt makers and quiz questions.', input_html: {checked: true}
       .row
         .col-xs-12.col-md-12
 
