--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -24,7 +24,8 @@
   margin-left: 10px;
 }
 a:hover .navbar-static-top__icon-circle,
-a:active .navbar-static-top__icon-circle {
+a:active .navbar-static-top__icon-circle,
+.open a.dropdown-toggle .navbar-static-top__icon-circle {
   display: inline-block;
   width: 12px;
   height: 12px;
