--- a/app/views/admin/gifts/_form.html.haml
+++ b/app/views/admin/gifts/_form.html.haml
@@ -38,12 +38,12 @@
 
         = f.fields_for :pretty_parcels do |gp|
           = gp.input :id, as: :hidden
-          = gp.input :parcel_id, collection: Parcel.active.pretty.all, value_method: :id, label_method: :description, input_html: {}, label: 'Gift Box'
+          = gp.input :parcel_id, collection: Ec::Parcel.active.pretty.all, value_method: :id, label_method: :description, input_html: {}, label: 'Gift Box'
           = gp.input :gift_id, as: :hidden, value: @gift.id
 
         = f.fields_for :shipping_parcels do |gp|
           = gp.input :id, as: :hidden
-          = gp.input :parcel_id, collection: Parcel.active.shipping.all, value_method: :id, label_method: :description, input_html: {}, label: 'Shipping Box'
+          = gp.input :parcel_id, collection: Ec::Parcel.active.shipping.all, value_method: :id, label_method: :description, input_html: {}, label: 'Shipping Box'
           = gp.input :gift_id, as: :hidden, value: @gift.id
 
     = f.input :available, label: 'Availabe to Customers'
