--- a/app/views/vendor_mailer/acknowledge_order_request.html.haml
+++ b/app/views/vendor_mailer/acknowledge_order_request.html.haml
@@ -5,13 +5,13 @@
         %h1{style: "font-size: 28px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; text-align: center; color: #4D4C4D; margin-bottom: 14px; line-height: 1.2;"}
           Hello #{@vendor.name} ~
           %br
-          %img{src: "http://localhost:3000/email-signature-images/heart-24.png", style: "padding-right: 12px; vertical-align: middle;"}
+          %img{src: email_image_url("heart-24.png"), style: "padding-right: 12px; vertical-align: middle;"}
           An order has been placed at Wrapt.com
         %p{style: "text-align: center; font-size: 24px; color: #4D4C4D; font-weight: normal; line-height: 1.2;"}
           Please follow
           = link_to ecommerce_vendor_confirmation_url(@purchase_order.vendor_token)  do
             this link
-          to review, confirm availability, accept the order, and get a shipping label. 
+          to review, confirm availability, accept the order, and get a shipping label.
         %table{style: "margin: 60px auto 40px; border: 1px solid #E2E2E2; max-width: 600px; min-width: 80%"}
           %tr
             %th{style: "padding: 4px; text-align: left; vertical-align: top; font-weight: bold; color: #4D4C4D;"} SKU
@@ -25,4 +25,4 @@
               %td{style: "padding: 4px; text-align: left; vertical-align: top; font-weight: normal; color: #4D4C4D;"}= line_item.quantity
     %tr
       %td{style: "padding-bottom: 60px; text-align: center;"}
-        %img{src: "http://localhost:3000/email-signature-images/logo-with-love.png", style: "padding-right: 12px; vertical-align: middle;"}
+        %img{src: email_image_url("logo-with-love.png"), style: "padding-right: 12px; vertical-align: middle;"}
