--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -31,7 +31,13 @@
 .btn.active {
   box-shadow: none;
 }
-.btn-default:hover {
+.btn-default__white {
+  background-color: #FFFFFF;
+  @include akkurat-bold;
+  letter-spacing: 1px;
+}
+.btn-default:hover,
+.btn-default__white:hover {
   background-color: $gray-011;
   border-color: $blue-006;
 }
