--- a/app/views/gift_recommendations/index.haml
+++ b/app/views/gift_recommendations/index.haml
@@ -7,12 +7,15 @@
         ="Wrapt found these #{@gift_recommendations.count} items uniquely suited to #{@profile.name} based on her personality, passions, & purpose.".html_safe
   .row.wrapt-carousel--wrapper
     .col-xs-12
-      - gifts = load_gift_recommendation_carousel_data(@gift_recommendations)
-      = carousel(carousel: gifts, unique_carousel_name: 'gr-carousel', slide_content_singular: 'gift', id: 'gr-carousel')
+      -# gifts = load_gift_recommendation_carousel_data(@gift_recommendations)
+      -#= carousel(carousel: gifts, unique_carousel_name: 'gr-carousel', slide_content_singular: 'gift', id: 'gr-carousel')
+      - if @gift_recommendations.any?
+        .wrapt-carousel.gr-carousel{data: {pjax_carousel: true, first_item_url: giftee_gift_recommendation_path(params[:giftee_id], @gift_recommendations.first, carousel_page: @page)}}
   
 - content_for :page_js do
-  = render '/application/carousel_js'
+  -#= render '/application/carousel_js'
   :javascript
-    new App.GiftLikeDislikeButtons();
+    new window.PjaxCarousel(".gr-carousel[data-pjax-carousel]", ".gr-carousel__gift-container", "[data-loads-in-pjax-carousel]").listen();
+
 
 
