home page hero changes

--- a/app/views/home/_hero_text_1.haml
+++ b/app/views/home/_hero_text_1.haml
@@ -1,5 +1,5 @@
 .container.home__hero-text
   .row
-    .col-sm-12.col-md-8.col-md-offset-2
+    .col-xs-12
       %h1.light.text-center
         The right gift is out there
