--- a/app/views/home/_hero_text_2.haml
+++ b/app/views/home/_hero_text_2.haml
@@ -1,4 +1,4 @@
 .row
-  .col-xs-12.col-sm-8.col-sm-offset-2.col-lg-8.col-lg-offset-2
+  .col-xs-12
     %p.home__hero-text-secondary__p.light.text-center
       Wrapt will reveal it to you, chosen just for her.
