--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -58,27 +58,45 @@
 .home__hero {
   background-size: 100vw;
   background-repeat: no-repeat;
-  background-position: left 70%;
+  background-position: bottom;
   border: none;
   margin-bottom: 24px;
   padding-top: 48px;
   position: relative;
   @media (max-width: $screen-xs-max) {
-    padding-top: 20px;
+    padding-top: 36px;
     background-size: cover;
-    background-position: 55% 50%;
+    background-position: bottom;
   }
   @media (max-width: $screen-sm-max) {
-    // background-image: image-url('hero-image-v2-1536');
-    background-image: image-url('hero-image-v3');
+    background-image: image-url('hero-image-v4-mobile-crop');
   }
-  @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
-    // background-image: image-url('hero-image-v2-1984');
-    background-image: image-url('hero-image-v3');
+  @media (min-width: $screen-md-min) {
+    background-image: image-url('hero-image-v4');
   }
-  @media (min-width: $screen-lg-min) {
-    // background-image: image-url('hero-image-v2');
-    background-image: image-url('hero-image-v3');
+  @media (min-width: 1800px) {
+    background-position: left 90%;
+  }
+  &:before {
+    content:'';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 40px;
+    background-image: linear-gradient(to top, $blue-008, black);
+    @media (min-width: 1200px) and (max-width: 1525px) {
+      height: 40px;
+    }
+    @media (min-width: 1526px) and (max-width: 1799px) {
+      height: 70px;
+    }
+    @media (min-width: 1800px) {
+      height: 50px;
+    }
+    @media (min-width: 2160px) {
+      height: 30px;
+    }
   }
 }
 
@@ -86,10 +104,10 @@
 .home__hero-text h1 {
   font-size: rem(40);
   color: #fff;
-  font-weight: 700;
+  @include akkurat-bold;
   text-transform: uppercase;
   @media (max-width: $screen-xs-max) {
-    margin-bottom: 500px;
+    margin-bottom: 336px;
   }
   @media (min-width: $screen-sm-min) {
     line-height: 1;
@@ -100,38 +118,36 @@
   @media (min-width: $screen-md-min) {
     margin-bottom: 500px;
     line-height: 1.2;
-  }
-  @media (min-width: $screen-lg-min) {
-    font-size: rem(50);
+    font-size: rem(56);
   }
 }
 .home__hero-text-secondary .home__hero-text-secondary__p {
-  font-size: rem(28px);
+  font-size: rem(26);
   line-height: 1.5em;
   color: #fff;
-  font-weight: 500;
   text-transform: uppercase;
+  @include akkurat-light;
+  padding-top: 20px;
   @media (max-width: $screen-xs-max) {
-    @include akkurat-regular;
     font-size: rem(26px);
     margin: 0px auto;
-    margin-top: -520px;
+    margin-top: -356px;
     max-width: 577px;
-
   } 
   @media (max-width: $screen-sm-max) {
     br {display: none;}
   } 
   @media (min-width: $screen-sm-min) {
     margin-top: -440px;
-    font-size: rem(22px);
-    @include akkurat-regular;
+    
   }
   @media (min-width: $screen-md-min) {
-    margin-top: -500px;
+    margin-top: -490px;
+    font-size: rem(42px);
+    padding-top: 0;
   }
   @media (min-width: $screen-lg-min) {
-    margin-top: -500px;
+    margin-top: -490px;
   }
 }
 
